Fixing spacing on image of card row for IE

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -10716,7 +10716,9 @@ a.video_preview::before {
     .explorer .news-row-card .card-row {
       float: left;
       width: 100%;
-      clear: both;
+      clear: both; }
+    .explorer .news-trending .card-row__image,
+    .explorer .news-row-card .card-row__image {
       width: 45%; }
     .explorer .news-trending .card-row__copy,
     .explorer .news-row-card .card-row__copy {
