--- a/docroot/themes/custom/ucsf/scss/explorer/_explorer.scss
+++ b/docroot/themes/custom/ucsf/scss/explorer/_explorer.scss
@@ -1412,6 +1412,8 @@
           float: left;
           width: 100%;
           clear: both;
+        }
+        .card-row__image {
           width: 45%;
         }
         .card-row__copy {
